kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garu-io-projects-api
  namespace: garu-io-projects-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:

        - name: api
          image: garugaru/garu-io-projects-api:latest
          ports:
            - containerPort: 8000
              name: api

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 1
            failureThreshold: 5
            successThreshold: 1
            periodSeconds: 5

          resources:
            requests:
              memory: "10Mi"
              cpu: "5m"
            limits:
              memory: "30Mi"
              cpu: "50m"
