kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: garu-io-projects-api
  namespace: garu-io-projects-api
  labels:
    app: api

spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000

  selector:
    app: api
