kubernetes/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: garu-io-projects-api
  namespace: garu-io-projects-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /projects$1
spec:
  rules:

    - host: api.garu.io
      http:
        paths:
          - path: /projects(.*)
            backend:
              serviceName: garu-io-projects-api
              servicePort: 80

  tls:
    - hosts:
        - api.garu.io
      secretName: garu-io-api-cert
